[Refactor] Finish all board by using ezddd .